Fix loading of google charts, add function to jump to page section when clicking on chart

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -333,7 +333,7 @@ nav ul li.active {
 	overflow: hidden;
 	margin-left: auto; 
 	margin-right: auto;
-	width: 700px; 
+	width: 864px; 
 	height: 350px;
 }
 
